[package]
name = "hitscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
pico-args = "0.5.0"
trie = { git = "https://github.com/NLnetLabs/try-tries-and-trees", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"

[[bin]]
name = "trace2link"
path = "src/trace2link.rs"

[[bin]]
name = "linkmerge"
path = "src/linkmerge.rs"

[[bin]]
name = "link2iface"
path = "src/link2iface.rs"

[[bin]]
name = "text2line"
path = "src/text2line.rs"

[[bin]]
name = "trace2mat"
path = "src/trace2mat.rs"

[[bin]]
name = "dbmerge"
path = "src/dbmerge.rs"

[[bin]]
name = "ipsample"
path = "src/ipsample.rs"

[[bin]]
name = "iplabel"
path = "src/iplabel.rs"
